--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  Copyright 2015-2020 Hippo
+  Copyright 2023 Bloomreach (http://www.bloomreach.com)
 
   Licensed under the Apache License, Version 2.0
   (the "License"); you may not use this file except in compliance with the
@@ -10,40 +10,46 @@
   OR CONDITIONS OF ANY KIND, either express or implied. See the License for
   the specific language governing permissions and limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="https://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
+  <parent>
+    <groupId>org.onehippo.cms7</groupId>
+    <artifactId>hippo-cms7-project</artifactId>
+    <version>15.0.0</version>
+  </parent>
 
   <name>Bloomreach XM Extra Folder Context Menus</name>
   <description>Bloomreach XM Extra Folder Context Menus</description>
   <groupId>org.onehippo.forge.folderctxmenus</groupId>
   <artifactId>folderctxmenus</artifactId>
-  <version>6.0.0-SNAPSHOT</version>
+  <version>6.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <url>https://bloomreach-forge.github.io/folder-context-menus</url>
 
   <properties>
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.build.javaVersion>1.11</project.build.javaVersion>
+    <project.build.javaVersion>1.8</project.build.javaVersion>
 
-    <jcr.version>2.0</jcr.version>
+<!--    <jcr.version>2.0</jcr.version>-->
     <hippo.repository.version>15.0.0</hippo.repository.version>
     <hippo.cms.version>15.0.0</hippo.cms.version>
 
-    <lib.slf4j.version>1.7.25</lib.slf4j.version>
+<!--    <lib.slf4j.version>1.7.25</lib.slf4j.version>-->
 
-    <plugin.compiler.version>3.10.1</plugin.compiler.version>
-    <plugin.clean.version>3.1.0</plugin.clean.version>
-    <plugin.deploy.version>2.8.2</plugin.deploy.version>
-    <plugin.install.version>2.5.2</plugin.install.version>
-    <plugin.jar.version>3.2.0</plugin.jar.version>
-    <plugin.javadoc.version>3.0.1</plugin.javadoc.version>
+<!--    <plugin.compiler.version>3.10.1</plugin.compiler.version>-->
+<!--    <plugin.clean.version>3.1.0</plugin.clean.version>-->
+<!--    <plugin.deploy.version>2.8.2</plugin.deploy.version>-->
+<!--    <plugin.install.version>2.5.2</plugin.install.version>-->
+<!--    <plugin.jar.version>3.2.0</plugin.jar.version>-->
+<!--    <plugin.javadoc.version>3.0.1</plugin.javadoc.version>-->
     <plugin.jxr.version>3.3.0</plugin.jxr.version>
-    <plugin.project-info-reports.version>3.0.0</plugin.project-info-reports.version>
-    <plugin.release.version>2.5.3</plugin.release.version>
-    <plugin.resources.version>3.1.0</plugin.resources.version>
-    <plugin.site.version>3.8.2</plugin.site.version>
-    <plugin.source.version>3.2.0</plugin.source.version>
+<!--    <plugin.project-info-reports.version>3.0.0</plugin.project-info-reports.version>-->
+<!--    <plugin.release.version>2.5.3</plugin.release.version>-->
+<!--    <plugin.resources.version>3.1.0</plugin.resources.version>-->
+<!--    <plugin.site.version>3.8.2</plugin.site.version>-->
+<!--    <plugin.source.version>3.2.0</plugin.source.version>-->
   </properties>
 
   <licenses>
@@ -83,7 +89,7 @@
     <repository>
       <name>Hippo Maven 2 Forge Repository</name>
       <id>hippo-maven2-forge</id>
-      <url>https://maven.onehippo.com/content/repositories/forge-releases/</url>
+      <url>https://maven.bloomreach.com/content/repositories/forge-releases/</url>
       <uniqueVersion>false</uniqueVersion>
     </repository>
   </distributionManagement>
@@ -92,12 +98,12 @@
     <repository>
       <id>hippo</id>
       <name>Hippo maven 2 repository.</name>
-      <url>https://maven.onehippo.com/maven2/</url>
+      <url>https://maven.bloomreach.com/maven2/</url>
     </repository>
     <repository>
       <id>hippo-maven2-forge</id>
       <name>Hippo Maven 2 Forge repository</name>
-      <url>https://maven.onehippo.com/maven2-forge/</url>
+      <url>https://maven.bloomreach.com/maven2-forge/</url>
       <snapshots />
     </repository>
   </repositories>
@@ -105,12 +111,6 @@
   <dependencyManagement>
 
     <dependencies>
-
-      <dependency>
-        <groupId>javax.jcr</groupId>
-        <artifactId>jcr</artifactId>
-        <version>${jcr.version}</version>
-      </dependency>
 
       <dependency>
         <groupId>org.onehippo.cms7</groupId>
@@ -148,12 +148,6 @@
         <version>${hippo.cms.version}</version>
       </dependency>
 
-      <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-api</artifactId>
-        <version>${lib.slf4j.version}</version>
-      </dependency>
-
     </dependencies>
 
   </dependencyManagement>
@@ -162,32 +156,8 @@
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-project-info-reports-plugin</artifactId>
-        <version>${plugin.project-info-reports.version}</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jxr-plugin</artifactId>
         <version>${plugin.jxr.version}</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <version>${plugin.javadoc.version}</version>
-        <configuration>
-          <encoding>${project.build.sourceEncoding}</encoding>
-          <skip>false</skip>
-          <aggregate>true</aggregate>
-        </configuration>
-        <reportSets>
-          <reportSet>
-            <id>default</id>
-            <reports>
-              <report>javadoc</report>
-              <report>test-javadoc</report>
-            </reports>
-          </reportSet>
-        </reportSets>
       </plugin>
     </plugins>
   </reporting>
@@ -202,67 +172,6 @@
 
     <defaultGoal>package</defaultGoal>
 
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>${plugin.compiler.version}</version>
-        <configuration>
-          <source>${project.build.javaVersion}</source>
-          <target>${project.build.javaVersion}</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-clean-plugin</artifactId>
-        <version>${plugin.clean.version}</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-install-plugin</artifactId>
-        <version>${plugin.install.version}</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-deploy-plugin</artifactId>
-        <version>${plugin.deploy.version}</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>${plugin.jar.version}</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-resources-plugin</artifactId>
-        <version>${plugin.resources.version}</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-site-plugin</artifactId>
-        <version>${plugin.site.version}</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-release-plugin</artifactId>
-        <version>${plugin.release.version}</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
-        <version>${plugin.source.version}</version>
-        <executions>
-          <execution>
-            <id>attach-sources</id>
-            <phase>verify</phase>
-            <goals>
-              <goal>jar-no-fork</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-
   </build>
 
   <profiles>
@@ -271,14 +180,6 @@
       <id>github.pages</id>
       <build>
         <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-site-plugin</artifactId>
-            <version>${plugin.site.version}</version>
-            <configuration>
-              <outputDirectory>docs</outputDirectory>
-            </configuration>
-          </plugin>
         </plugins>
       </build>
     </profile>
