--- a/demo/site/pom.xml
+++ b/demo/site/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.onehippo.forge.folderctxmenus</groupId>
     <artifactId>folderctxmenus-demo</artifactId>
-    <version>6.0.0</version>
+    <version>6.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>folderctxmenus-demo-site</artifactId>
   <packaging>pom</packaging>
