--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.onehippo.cms7</groupId>
     <artifactId>hippo-cms7-release</artifactId>
-    <version>16.0.0-SNAPSHOT</version>
+    <version>16.0.0</version>
   </parent>
 
   <name>Bloomreach XM Extra Folder Context Menus Demo</name>
@@ -63,7 +63,7 @@
 
     <forge.folderctxmenus.version>${project.version}</forge.folderctxmenus.version>
 
-    <essentials.version>16.0.0-SNAPSHOT</essentials.version>
+    <essentials.version>${hippo.release.version}</essentials.version>
 
     <development-module-deploy-dir>shared/lib</development-module-deploy-dir>
 
