--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
   <parent>
     <groupId>org.onehippo.cms7</groupId>
     <artifactId>hippo-cms7-project</artifactId>
-    <version>16.0.0-SNAPSHOT</version>
+    <version>16.0.0</version>
   </parent>
 
   <name>Bloomreach XM Extra Folder Context Menus</name>
@@ -28,9 +28,6 @@
   <url>https://bloomreach-forge.github.io/folder-context-menus</url>
 
   <properties>
-    <hippo.repository.version>16.0.0-SNAPSHOT</hippo.repository.version>
-    <hippo.cms.version>16.0.0-SNAPSHOT</hippo.cms.version>
-
     <plugin.jxr.version>3.3.0</plugin.jxr.version>
   </properties>
 
@@ -97,37 +94,37 @@
       <dependency>
         <groupId>org.onehippo.cms7</groupId>
         <artifactId>hippo-repository-api</artifactId>
-        <version>${hippo.repository.version}</version>
+        <version>${hippo.release.version}</version>
       </dependency>
 
       <dependency>
         <groupId>org.onehippo.cms7</groupId>
         <artifactId>hippo-repository-utilities</artifactId>
-        <version>${hippo.repository.version}</version>
+        <version>${hippo.release.version}</version>
       </dependency>
 
       <dependency>
         <groupId>org.onehippo.cms7</groupId>
         <artifactId>hippo-repository-workflow</artifactId>
-        <version>${hippo.repository.version}</version>
+        <version>${hippo.release.version}</version>
       </dependency>
 
       <dependency>
         <groupId>org.onehippo.cms7</groupId>
         <artifactId>hippo-cms-api</artifactId>
-        <version>${hippo.cms.version}</version>
+        <version>${hippo.release.version}</version>
       </dependency>
 
       <dependency>
         <groupId>org.onehippo.cms7</groupId>
         <artifactId>hippo-cms-builtin</artifactId>
-        <version>${hippo.cms.version}</version>
+        <version>${hippo.release.version}</version>
       </dependency>
 
       <dependency>
         <groupId>org.onehippo.cms7</groupId>
         <artifactId>hippo-cms-perspectives</artifactId>
-        <version>${hippo.cms.version}</version>
+        <version>${hippo.release.version}</version>
       </dependency>
 
     </dependencies>
