--- a/demo/repository-data/site/src/main/resources/hcm-config/hst/configurations.yaml
+++ b/demo/repository-data/site/src/main/resources/hcm-config/hst/configurations.yaml
@@ -22,3 +22,6 @@ definitions:
       /folderctxmenusdemo:
         jcr:primaryType: hst:configuration
         hst:inheritsfrom: [../common]
+      /folderctxmenusdemo-fr:
+        jcr:primaryType: hst:configuration
+        hst:inheritsfrom: [../common]
