--- a/frontend/src/main/resources/org/onehippo/forge/folderctxmenus/cms/plugin/CopyOrMoveFolderDialog.properties
+++ b/frontend/src/main/resources/org/onehippo/forge/folderctxmenus/cms/plugin/CopyOrMoveFolderDialog.properties
@@ -5,3 +5,4 @@ folder.action.label.destination.folder.name = Destination Folder:
 folder.action.label.destination.folder.url.name = URL Name:
 folder.action.label.destination.folder.url.reset = Reset
 folder.action.label.destination.folder.url.edit = Edit
+folder.action.label.destination.folder.translation = Link as Translation:
