--- a/repository/src/main/resources/hcm-config/configuration/workflows/threepane/folder-permissions/renderer/folder-permissions-copy-menuitem.yaml
+++ b/repository/src/main/resources/hcm-config/configuration/workflows/threepane/folder-permissions/renderer/folder-permissions-copy-menuitem.yaml
@@ -4,3 +4,4 @@ definitions:
       jcr:primaryType: frontend:plugin
       plugin.class: org.onehippo.forge.folderctxmenus.cms.plugin.CopyFolderWorkflowMenuItemPlugin
       wicket.id: ${item}
+      default.linkTranslation: false
