--- a/repository/pom.xml
+++ b/repository/pom.xml
@@ -16,7 +16,7 @@
   <parent>
     <groupId>org.onehippo.forge.folderctxmenus</groupId>
     <artifactId>folderctxmenus</artifactId>
-    <version>6.1.2-SNAPSHOT</version>
+    <version>6.1.2</version>
   </parent>
 
   <name>Bloomreach XM Extra Folder Context Menus Repository</name>
